package com.zzaip.monopoly.game_logic.field;

import jakarta.persistence.Entity;
import jakarta.persistence.Table;

@Entity
@Table(name="NeutralField")
public class NeutralField extends AbstractField{

}

